# notiz

./: README.md  meson.build
inc/: config.h.in  meson.build
inc/notiz/: cli-input.h  commands.h  utils.h
inc/termNote/: cli-input.h  commands.h  utils.h
src/: cli-input.c  commands.c  main.c  meson.build  utils.c
